Places controller for Guests, including localization
If you get ambiguous Typescript errors along the way, quit and re-open your editor

```console
yarn psy g:controller V1/Guest/Places index show

yarn psy sync --ignore-errors

yarn psy sync

yarn build

yarn build:spec

yarn uspec spec/unit/controllers/V1/Guest/PlacesController.spec.ts
```
