# api/src/openapi/mobile.openapi.json
@@ -6,6 +6,131 @@
     "description": "The autogenerated openapi spec for your app"
   },
   "paths": {
+    "/v1/guest/places": {
+      "parameters": [
+        {
+          "in": "query",
+          "required": false,
+          "name": "cursor",
+          "description": "Fast pagination cursor",
+          "allowReserved": true,
+          "schema": {
+            "type": [
+              "string",
+              "null"
+            ]
+          }
+        }
+      ],
+      "get": {
+        "tags": [
+          "v1-guest-places"
+        ],
+        "description": "Place index endpoint for Guests",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "cursor",
+                    "results"
+                  ],
+                  "properties": {
+                    "cursor": {
+                      "type": [
+                        "string",
+                        "null"
+                      ]
+                    },
+                    "results": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/PlaceSummaryForGuests"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "description": "Success"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/ValidationErrors"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/v1/guest/places/{id}": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "id",
+          "required": true,
+          "schema": {
+            "type": "string"
+          }
+        }
+      ],
+      "get": {
+        "tags": [
+          "v1-guest-places"
+        ],
+        "description": "Place show endpoint for Guests",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PlaceForGuests"
+                }
+              }
+            },
+            "description": "Success"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/ValidationErrors"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
     "/v1/host/localized-texts/{id}": {
       "parameters": [
         {
@@ -821,6 +946,38 @@
   },
   "components": {
     "schemas": {
+      "Appliance": {
+        "type": "object",
+        "required": [
+          "label",
+          "value"
+        ],
+        "properties": {
+          "label": {
+            "type": "string"
+          },
+          "value": {
+            "type": "string",
+            "description": "\nThe following values will be allowed:\n  dishwasher,\n  microwave,\n  oven,\n  stove"
+          }
+        }
+      },
+      "BedType": {
+        "type": "object",
+        "required": [
+          "label",
+          "value"
+        ],
+        "properties": {
+          "label": {
+            "type": "string"
+          },
+          "value": {
+            "type": "string",
+            "description": "\nThe following values will be allowed:\n  bunk,\n  cot,\n  king,\n  queen,\n  sofabed,\n  twin"
+          }
+        }
+      },
       "OpenapiValidationErrors": {
         "type": "object",
         "required": [
@@ -909,6 +1066,58 @@
           }
         }
       },
+      "PlaceForGuests": {
+        "type": "object",
+        "required": [
+          "displayStyle",
+          "id",
+          "rooms",
+          "sleeps",
+          "style",
+          "title"
+        ],
+        "properties": {
+          "displayStyle": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string",
+            "format": "bigint"
+          },
+          "rooms": {
+            "type": "array",
+            "items": {
+              "anyOf": [
+                {
+                  "$ref": "#/components/schemas/RoomBathroomForGuests"
+                },
+                {
+                  "$ref": "#/components/schemas/RoomBedroomForGuests"
+                },
+                {
+                  "$ref": "#/components/schemas/RoomDenForGuests"
+                },
+                {
+                  "$ref": "#/components/schemas/RoomKitchenForGuests"
+                },
+                {
+                  "$ref": "#/components/schemas/RoomLivingRoomForGuests"
+                }
+              ]
+            }
+          },
+          "sleeps": {
+            "type": "integer"
+          },
+          "style": {
+            "type": "string",
+            "description": "The following values will be allowed:\n  cabin,\n  cave,\n  cottage,\n  dump,\n  lean_to,\n  tent,\n  treehouse"
+          },
+          "title": {
+            "type": "string"
+          }
+        }
+      },
       "PlaceSummary": {
         "type": "object",
         "required": [
@@ -921,6 +1130,22 @@
             "format": "bigint"
           },
           "name": {
+            "type": "string"
+          }
+        }
+      },
+      "PlaceSummaryForGuests": {
+        "type": "object",
+        "required": [
+          "id",
+          "title"
+        ],
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "bigint"
+          },
+          "title": {
             "type": "string"
           }
         }
@@ -962,6 +1187,35 @@
           "type": {
             "type": "string",
             "description": "The following values will be allowed:\n  Bathroom"
+          }
+        }
+      },
+      "RoomBathroomForGuests": {
+        "type": "object",
+        "required": [
+          "bathOrShowerStyle",
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "bathOrShowerStyle": {
+            "type": "string"
+          },
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string",
+            "format": "bigint"
+          },
+          "title": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "description": "The following values will be allowed:\n  Bathroom,\n  Bedroom,\n  Den,\n  Kitchen,\n  LivingRoom"
           }
         }
       },
@@ -1029,6 +1283,38 @@
           }
         }
       },
+      "RoomBedroomForGuests": {
+        "type": "object",
+        "required": [
+          "bedTypes",
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "bedTypes": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/BedType"
+            }
+          },
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string",
+            "format": "bigint"
+          },
+          "title": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "description": "The following values will be allowed:\n  Bathroom,\n  Bedroom,\n  Den,\n  Kitchen,\n  LivingRoom"
+          }
+        }
+      },
       "RoomBedroomSummary": {
         "type": "object",
         "required": [
@@ -1082,6 +1368,31 @@
           "type": {
             "type": "string",
             "description": "The following values will be allowed:\n  Den"
+          }
+        }
+      },
+      "RoomDenForGuests": {
+        "type": "object",
+        "required": [
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string",
+            "format": "bigint"
+          },
+          "title": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "description": "The following values will be allowed:\n  Bathroom,\n  Bedroom,\n  Den,\n  Kitchen,\n  LivingRoom"
           }
         }
       },
@@ -1149,6 +1460,38 @@
           }
         }
       },
+      "RoomKitchenForGuests": {
+        "type": "object",
+        "required": [
+          "appliances",
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "appliances": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Appliance"
+            }
+          },
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string",
+            "format": "bigint"
+          },
+          "title": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "description": "The following values will be allowed:\n  Bathroom,\n  Bedroom,\n  Den,\n  Kitchen,\n  LivingRoom"
+          }
+        }
+      },
       "RoomKitchenSummary": {
         "type": "object",
         "required": [
@@ -1202,6 +1545,31 @@
           "type": {
             "type": "string",
             "description": "The following values will be allowed:\n  LivingRoom"
+          }
+        }
+      },
+      "RoomLivingRoomForGuests": {
+        "type": "object",
+        "required": [
+          "displayType",
+          "id",
+          "title",
+          "type"
+        ],
+        "properties": {
+          "displayType": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string",
+            "format": "bigint"
+          },
+          "title": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "description": "The following values will be allowed:\n  Bathroom,\n  Bedroom,\n  Den,\n  Kitchen,\n  LivingRoom"
           }
         }
       },
